<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.skywavestudios.prefactor.HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="@dimen/history_icon_height"
            android:layout_height="@dimen/history_icon_height"
            android:layout_gravity="center"
            android:background="@drawable/search" />

        <AutoCompleteTextView
            android:id="@+id/history_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:completionThreshold="1"
            android:hint="@string/history_search_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/history_padding_normal"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/history_row_factorno"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/main_rowno" />

        <TextView
            android:id="@+id/history_row_customername"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/main_customer" />

        <TextView
            android:id="@+id/history_row_factordate"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/main_date" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
