<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/showfactor"
    android:background="@color/background"
    tools:context="com.skywavestudios.prefactor.ShowFactorActivity">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/image_factor_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/main_side_margin"
            android:layout_marginLeft="@dimen/main_side_margin"
            android:layout_marginRight="@dimen/main_side_margin"
            android:layout_marginStart="@dimen/main_side_margin"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_heightPercent="20%">


            <TextView
                android:id="@+id/image_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_normal_margin"
                android:layout_weight="30"
                android:text="@string/main_title"
                android:textSize="@dimen/main_title_textsize"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/main_normal_margin"
                android:layout_weight="35"
                android:orientation="horizontal"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="@dimen/main_upbox_height"
                        android:layout_height="@dimen/main_upbox_height"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/phone" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/image_phoneNo_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/main_normal_margin"
                    android:layout_marginStart="@dimen/main_normal_margin"
                    android:layout_weight="3.5"
                    android:textDirection="ltr"
                    android:theme="@style/EditTextTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/main_normal_margin"
                    android:layout_marginRight="@dimen/main_normal_margin"
                    android:layout_weight="1.5"
                    android:text="@string/main_factorno" />

                <TextView
                    android:id="@+id/image_factorNo_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"
                    android:inputType="number"
                    android:textDirection="ltr"
                    android:theme="@style/EditTextTheme" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/main_normal_margin"
                android:layout_weight="35"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/image_customer_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/main_customer" />

                <TextView
                    android:id="@+id/image_customer_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/main_normal_margin"
                    android:layout_marginStart="@dimen/main_normal_margin"
                    android:layout_weight="3.5"
                    android:completionThreshold="1"
                    android:theme="@style/EditTextTheme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/main_normal_margin"
                    android:layout_marginRight="@dimen/main_normal_margin"
                    android:layout_weight="1.5"
                    android:text="@string/main_date" />

                <TextView
                    android:id="@+id/image_date_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"
                    android:textDirection="ltr"
                    android:theme="@style/EditTextTheme" />


            </LinearLayout>


        </LinearLayout>

        <TableLayout
            android:id="@+id/image_factor_products_table"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/image_factor_header"
            android:layout_marginTop="@dimen/main_normal_margin"
            android:shrinkColumns="1,5"
            android:stretchColumns="*"
            app:layout_heightPercent="60%">


        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/image_factor_products_table"
            android:layout_marginBottom="@dimen/main_small_margin"
            android:layout_marginEnd="@dimen/main_normal_margin"
            android:layout_marginLeft="@dimen/main_normal_margin"
            android:layout_marginRight="@dimen/main_normal_margin"
            android:layout_marginStart="@dimen/main_normal_margin"
            android:orientation="vertical"
            app:layout_heightPercent="20%"
            android:weightSum="10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginEnd="@dimen/main_side_margin"
                android:layout_marginLeft="@dimen/main_side_margin"
                android:layout_marginRight="@dimen/main_side_margin"
                android:layout_marginStart="@dimen/main_side_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/image_total_no"
                    android:layout_width="@dimen/main_upbox_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:id="@+id/image_total_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/image_total_no"
                    android:layout_toStartOf="@id/image_total_no" />


            </RelativeLayout>

            <TextView
                android:id="@+id/image_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:hint="@string/main_description"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>

</RelativeLayout>
