<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/factor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skywavestudios.prefactor.MainActivity">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/factor_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/main_side_margin"
            android:layout_marginLeft="@dimen/main_side_margin"
            android:layout_marginRight="@dimen/main_side_margin"
            android:layout_marginStart="@dimen/main_side_margin"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_heightPercent="20%">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_normal_margin"
                android:layout_weight="30"
                android:text="@string/main_title"
                android:textSize="@dimen/main_title_textsize"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/main_normal_margin"
                android:layout_weight="35">

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="@dimen/main_upbox_height"
                    android:layout_height="@dimen/main_upbox_height"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/phone"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/phoneNo_editText"
                    android:layout_width="@dimen/main_upbox_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/main_normal_margin"
                    android:layout_marginStart="@dimen/main_normal_margin"
                    android:layout_toEndOf="@id/phone_icon"
                    android:layout_toRightOf="@id/phone_icon"
                    android:inputType="phone"
                    android:textDirection="ltr"/>

                <EditText
                    android:id="@+id/factorNo_editText"
                    android:layout_width="@dimen/main_upbox_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:inputType="number"
                    android:textDirection="ltr"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/main_normal_margin"
                    android:layout_marginRight="@dimen/main_normal_margin"
                    android:layout_toLeftOf="@id/factorNo_editText"
                    android:layout_toStartOf="@id/factorNo_editText"
                    android:text="@string/main_factorno" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/main_normal_margin"
                android:layout_weight="35">

                <TextView
                    android:id="@+id/customer_title"
                    android:layout_width="@dimen/main_upbox_height"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/main_customer" />

                <AutoCompleteTextView
                    android:id="@+id/customer_editText"
                    android:layout_width="@dimen/main_upbox_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/main_normal_margin"
                    android:layout_marginStart="@dimen/main_normal_margin"
                    android:layout_toEndOf="@id/customer_title"
                    android:layout_toRightOf="@id/customer_title"
                    android:completionThreshold="1" />

                <TextView
                    android:id="@+id/date_editText"
                    android:layout_width="@dimen/main_upbox_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:theme="@style/EditTextTheme"
                    android:textDirection="ltr"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/main_normal_margin"
                    android:layout_marginRight="@dimen/main_normal_margin"
                    android:layout_toLeftOf="@id/date_editText"
                    android:layout_toStartOf="@id/date_editText"
                    android:text="@string/main_date" />
            </RelativeLayout>


        </LinearLayout>

        <TableLayout
            android:id="@+id/factor_products_table"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/factor_header"
            android:layout_marginTop="@dimen/main_normal_margin"
            android:shrinkColumns="1,5"
            android:stretchColumns="*"
            app:layout_heightPercent="60%">


        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/factor_products_table"
            android:layout_marginBottom="@dimen/main_small_margin"
            android:orientation="vertical"
            app:layout_heightPercent="20%"
            android:layout_marginEnd="@dimen/main_normal_margin"
            android:layout_marginLeft="@dimen/main_normal_margin"
            android:layout_marginRight="@dimen/main_normal_margin"
            android:layout_marginStart="@dimen/main_normal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_upbox_height"
                android:layout_marginEnd="@dimen/main_side_margin"
                android:layout_marginLeft="@dimen/main_side_margin"
                android:layout_marginRight="@dimen/main_side_margin"
                android:layout_marginStart="@dimen/main_side_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_no"
                    android:layout_width="@dimen/main_upbox_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:id="@+id/total_string"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/total_no"
                    android:layout_toStartOf="@id/total_no" />


            </RelativeLayout>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_downbigbox_height"
                android:hint="@string/main_description" />
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>

    <Button
        android:layout_width="@dimen/main_button_height"
        android:layout_height="@dimen/main_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/main_small_margin"
        android:layout_marginEnd="@dimen/main_small_margin"
        android:layout_marginRight="@dimen/main_small_margin"
        android:background="@drawable/share"
        android:onClick="share_image" />

    <Button
        android:layout_width="@dimen/main_button_height"
        android:layout_height="@dimen/main_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/main_small_margin"
        android:layout_marginStart="@dimen/main_small_margin"
        android:layout_marginLeft="@dimen/main_small_margin"
        android:background="@drawable/list"
        android:onClick="go_to_history_list" />

</RelativeLayout>
